<?xml version="1.0"?>
<package>
  <name>ardrone_ctrl</name>
  <version>0.1.0</version>
  <description>The ardrone_ctrl package</description>
  <maintainer email="error404@sjtu.edu.cn">root</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
